--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,8 @@
 h1 {
     font-family: 'Playfair Display', serif;
-    font-size: 60px;
+    font-size: 90px;
     font-weight: 900;
+    text-align: center;
 }
 p {
     color: blue;
