--- a/styles.css
+++ b/styles.css
@@ -16,9 +16,8 @@ p {
     position: relative;
 	left: 270px;
 	color: white;
-	font-family: 'Inconsolata', serif;
+	font-family: 'Inconsolata', monospace;
 	font-size: 16px;
-	//text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 .footer {
@@ -35,13 +34,10 @@ body {
 
 a:link {
 	color: rgb(0, 128, 255);
-	//color: rgb(94, 170, 245);
 	text-decoration: none;
 }
 
 a:visited {
 	color: rgb(0, 128, 255);
-	//color: rgb(94, 170, 245);
 	text-decoration: none;
-}
 }
